added consistent error handling & responses
